--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Successfully dockerized your python app</h1>
+        <h1>Successfully dockerized your Python+Flask+Gunicorn app</h1>
     </body>
 </html>
